Making unit test Java 8 compatible